[package]
name = "ron"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"

[dependencies]
packed_struct = {version = "0.10", default-features = false }

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"

