cargo-features = ["per-package-target"]

[package]
name = "ron"
version = "0.1.0"
edition = "2018"
default-target = "x86_64-unknown-linux-gnu"

[build-dependencies]
cc = "*"

[dependencies]
packed_struct = {version = "0.10", default-features = false}
rlibc-rust = {version = "0.1.*", path="../rlibc"}